[ios] Fix WebStateListFastEnumerationHelper observer unregistration.

Convert WebStateListFastEnumerationHelper to use RAII to automatically
unregister the WebStateListObserver from the WebStateList observer list.

BUG=712391

Review-Url: https://codereview.chromium.org/2819373004
Cr-Commit-Position: refs/heads/master@{#465572}

Former-commit-id: 4a0a4e85d2a8d23a9aeb528bec0dac702b43c5f6